# fa_tools

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  crypto.py  enums.py  permissions.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  associations.py  audit.py  common.py  company.py  conversion.py  file.py  mapping.py  rule.py  template.py  user.py
backend/app/schemas/: audit.py  auth.py  confirmation.py  conversion.py  export.py  file.py  rule.py  standard.py  template.py
backend/app/services/: audit_service.py  confirmation_service.py  conversion_service.py  export_service.py  file_service.py  mapping_service.py  parser_service.py  rule_service.py  template_service.py
backend/app/tools/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_custom_fields.py  0003_builtin_field_overrides.py  0004_add_indexes.py  0005_auth_rbac.py  0006_run_status_error.py  0007_conversion_run_file_sheet.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py
backend/tests/fixtures/: bank_statement_basic.csv  bank_statement_basic.xlsx
backend/tests/integration/: test_admin.py  test_anomaly_downgrades_status.py  test_audit_api.py  test_auth.py  test_auth_fixture.py  test_builtin_overrides.py  test_companies_api.py  test_config_lifecycle.py  test_conversion_api.py  test_conversion_from_config.py  test_conversion_sheet_selection.py  test_custom_fields.py  test_detail_endpoints.py  test_detect_endpoint.py  test_dry_run.py  test_export_api.py  test_field_encryption.py  test_fk_pragma.py  test_full_mvp_flow.py  test_journal_detect_endpoint.py  (+10 more)
(+183 files in other folders)
