[project]
name = "fa-tools-backend"
version = "0.1.0"
description = "Financial automation tools backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "bcrypt>=4.1",
  "cryptography>=42",
  "fastapi>=0.115.0",
  "openpyxl>=3.1.5",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.4.0",
  "PyJWT>=2.8",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# 只把应用包 app 纳入构建，排除顶层的 migrations/tests/scripts，
# 否则新版 setuptools 的扁平布局自动发现会因多个顶层包而报错。
[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
